<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    tools:context=".MainActivity"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="horizontal">

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/spottedList"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollIndicators="right"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/videoView"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar_ingreso"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnIngresoVehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vehiculo"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnIngresoPersona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/persona"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/herramientas"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnListadoIngresos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listado_ingresos"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnReportes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reportes"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnConfiguración"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Configuración"
                android:textSize="24sp" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>